--- a/examples/client/include.am
+++ b/examples/client/include.am
@@ -5,6 +5,9 @@ if BUILD_EXAMPLE_CLIENTS
 noinst_PROGRAMS += examples/client/client
 noinst_HEADERS += examples/client/client.h
 examples_client_client_SOURCES      = examples/client/client.c
+if BUILD_CRYPTO_CB_TEST_PROVIDER
+examples_client_client_SOURCES     += tests/cryptocb-provider/cryptocb_loader.c
+endif
 examples_client_client_LDADD        = src/libwolfssl@LIBSUFFIX@.la $(LIB_STATIC_ADD) $(WOLFSENTRY_LIB)
 examples_client_client_DEPENDENCIES = src/libwolfssl@LIBSUFFIX@.la
 examples_client_client_CFLAGS = $(WOLFSENTRY_INCLUDE) $(AM_CFLAGS)
