--- a/testsuite/include.am
+++ b/testsuite/include.am
@@ -13,6 +13,9 @@ testsuite_testsuite_test_SOURCES = \
 			      examples/echoserver/echoserver.c \
 			      examples/server/server.c \
 			      testsuite/testsuite.c
+if BUILD_CRYPTO_CB_TEST_PROVIDER
+testsuite_testsuite_test_SOURCES += tests/cryptocb-provider/cryptocb_loader.c
+endif
 testsuite_testsuite_test_CFLAGS       = -DNO_MAIN_DRIVER $(AM_CFLAGS) $(WOLFSENTRY_INCLUDE)
 testsuite_testsuite_test_LDADD        = src/libwolfssl@LIBSUFFIX@.la $(LIB_STATIC_ADD) $(WOLFSENTRY_LIB)
 testsuite_testsuite_test_DEPENDENCIES = src/libwolfssl@LIBSUFFIX@.la
