--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -1,4 +1,9 @@
 @PACKAGE_INIT@
+# Autoconf-generated configs won't define PACKAGE_PREFIX_DIR; fall back to the
+# configured install prefix for non-relocatable packages.
+if (NOT DEFINED PACKAGE_PREFIX_DIR)
+  set(PACKAGE_PREFIX_DIR "@WOLFSSL_PREFIX_ABS@")
+endif()
 
 include(CMakeFindDependencyMacro)
 if (@HAVE_PTHREAD@)
