Fix for RSA private key parsing (allowing public) and RSA keygen no malloc support.

--- a/.github/workflows/os-check.yml
+++ b/.github/workflows/os-check.yml
@@ -70,6 +70,7 @@ jobs:
           '--enable-all --enable-certgencache',
           '--enable-sessionexport --enable-dtls --enable-dtls13',
           '--enable-sessionexport',
+          '--disable-examples CPPFLAGS=-DWOLFSSL_NO_MALLOC',
         ]
     name: make check
     if: github.repository_owner == 'wolfssl'
