Enable 8 combined OCSP and URLs instead of 1 of each

--- a/.gitignore
+++ b/.gitignore
@@ -470,3 +470,6 @@ wolfssl/debug-trace-error-codes.h
 wolfssl/debug-untrace-error-codes.h
 
 AGENTS.md
+
+# Code navigation files
+compile_commands.json
