Add commit hash to version.h

--- a/configure.ac
+++ b/configure.ac
@@ -11255,6 +11255,14 @@ AM_CCASFLAGS="$AM_CCASFLAGS $EXTRA_CCASFLAGS"
 AM_LDFLAGS="$AM_LDFLAGS $EXTRA_LDFLAGS"
 
 CREATE_HEX_VERSION
+GIT_HASH=${GIT_HASH-}
+if test "x$GIT_HASH" = "x"; then
+    GIT_HASH=`git rev-parse --short HEAD 2>/dev/null`
+fi
+if test "x$GIT_HASH" = "x"; then
+    GIT_HASH=unknown
+fi
+AC_SUBST([GIT_HASH])
 AC_SUBST([AM_CPPFLAGS])
 AC_SUBST([AM_CFLAGS])
 AC_SUBST([AM_LDFLAGS])
