--- a/src/include.am
+++ b/src/include.am
@@ -17,10 +17,16 @@ MAINTAINERCLEANFILES+= $(FIPS_FILES)
 EXTRA_DIST += src/bio.c
 EXTRA_DIST += src/conf.c
 EXTRA_DIST += src/pk.c
+EXTRA_DIST += src/pk_rsa.c
+EXTRA_DIST += src/pk_ec.c
+EXTRA_DIST += src/ssl_api_cert.c
+EXTRA_DIST += src/ssl_api_crl_ocsp.c
+EXTRA_DIST += src/ssl_api_pk.c
 EXTRA_DIST += src/ssl_asn1.c
 EXTRA_DIST += src/ssl_bn.c
 EXTRA_DIST += src/ssl_certman.c
 EXTRA_DIST += src/ssl_crypto.c
+EXTRA_DIST += src/ssl_ech.c
 EXTRA_DIST += src/ssl_load.c
 EXTRA_DIST += src/ssl_misc.c
 EXTRA_DIST += src/ssl_p7p12.c
